--- a/sass/component/_backdrop.scss
+++ b/sass/component/_backdrop.scss
@@ -2,13 +2,16 @@
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 2;
   width: 100%;
   height: 100%;
+  z-index: 100;
   padding: 40px 15px;
   background-color: $box-shadow3;
+
   opacity: 1;
-  transition: opacity $animation-time $animation-function;
+  visibility: visible;
+  transition: opacity $animation-time $animation-function,
+    visibility $animation-time $animation-function;
   overflow-y: scroll;
 
   &--is-hidden {
